fix: wrap address in QR code overlay

--- a/src/styles/components/WalletManager.module.sass
+++ b/src/styles/components/WalletManager.module.sass
@@ -241,7 +241,11 @@
 
     p
       font-size: 1em
+      max-width: 90%
+      overflow-wrap: break-word
       text-align: center
+      margin: 0 auto
+        top: 1em
 
     .QRCode
       width: 195px
